--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "rollup-plugin-terser": "^7.0.2",
     "vite": "^6.2.0"
   }
 }
